feat: add tienda creation button
